--- a/src/app/workers/pages/worker-management/worker-management.component.html
+++ b/src/app/workers/pages/worker-management/worker-management.component.html
@@ -1,1 +1,36 @@
-<
+<div class="table-wrapper">
+  <h1>{{ 'workers.title' | translate }}</h1>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.name' | translate }}">{{ 'workers.name' | translate }}</th>
+      <td mat-cell *matCellDef="let worker"> {{ worker.name }}</td>
+    </ng-container>
+    <ng-container matColumnDef="role">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.w_role' | translate }}">{{ 'workers.w_role' | translate }}</th>
+      <td mat-cell *matCellDef="let worker"> {{ worker.role  }}</td>
+    </ng-container>
+    <ng-container matColumnDef="hired_date">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.hired_date' | translate }}">{{ 'workers.hired_date' | translate }}</th>
+      <td mat-cell *matCellDef="let worker"> {{ worker.hired_date }}</td>
+    </ng-container>
+    <ng-container matColumnDef="project_id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.project_id' | translate }}">{{ 'workers.project_id' | translate }}</th>
+      <td mat-cell *matCellDef="let worker"> {{ worker.project_id }}</td>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>{{ 'workers.actions' | translate }}</th>
+      <td mat-cell *matCellDef="let worker">
+        <a (click)="onEditItem(worker)" href="javascript:void(0)" [attr.aria-label]="'workers.actions.edit' | translate">
+          <mat-icon>edit</mat-icon>
+        </a>
+        <a (click)="onDeleteItem(worker)" href="javascript:void(0)" [attr.aria-label]="'workers.actions.delete' | translate">
+          <mat-icon>delete</mat-icon>
+        </a>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="columnsToString"></tr>
+    <tr *matRowDef="let row; columns: columnsToString;"
+        [ngClass]="{ 'editable-row': workerData && workerData.worker_id === row.id}" mat-row></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+</div>
