feat: add buttons to delete, edit and modify project tables

--- a/src/app/machinery/pages/machinery-management/machinery-management.component.css
+++ b/src/app/machinery/pages/machinery-management/machinery-management.component.css
@@ -173,7 +173,7 @@ mat-paginator .mat-form-field-underline {
 /* Estilo del valor seleccionado en mat-select */
 mat-paginator .mat-select-value {
   color: #2F2E2D; /* Gris oscuro */
-  font-family: 'Futura', 'Arial', sans-serif;
+  font-family: 'Futura', 'Arial', sans-serif;;
 }
 
 /* Opciones del desplegable */
@@ -191,4 +191,39 @@ mat-paginator .mat-option:hover {
 /* Efecto de elevación en la tabla */
 .mat-elevation-z8 {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra más suave */
+}
+
+
+
+.add-button {
+  background-color: #DE7F1A !important;
+  color: white !important;
+  font-size: 0.85em;
+  border-radius: 6px;
+  padding: 8px 16px;
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;
+  text-transform: none;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.add-button:hover {
+  transform: scale(1.02);
+}
+
+.add-button mat-icon {
+  font-size: 20px;
+  vertical-align: middle;
+}
+
+.add-button .icon{
+  color: white !important;
+}
+
+.btn-add-wrapper {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 20px;
 }
