--- a/src/app/incidents/pages/incident-management/incident-management.component.html
+++ b/src/app/incidents/pages/incident-management/incident-management.component.html
@@ -1,5 +1,11 @@
 <div class="table-wrapper">
   <h1>{{ 'incidents.title' | translate }}</h1>
+  <div class="btn-add-wrapper">
+    <button mat-raised-button class="add-button" (click)="openAddDialog()">
+      <mat-icon class="icon">add</mat-icon>
+      {{ 'incidents.add' | translate }}
+    </button>
+  </div>
   <!-- Data Table -->
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
     <ng-container matColumnDef="date">
@@ -13,22 +19,22 @@
     </ng-container>
 
     <ng-container matColumnDef="severity">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'incidents.sort.severity' | translate }}">{{ 'incidents.severity' | translate }}</th>
-      <td mat-cell *matCellDef="let incident"> {{ incident.severity | translate }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'incidents.sort.severity' | translate }}">{{ 'incidents.i_severity' | translate }}</th>
+      <td mat-cell *matCellDef="let incident"> {{ ('incidents.severity.' + incident.severity.toLowerCase()) | translate }}</td>
     </ng-container>
 
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'incidents.sort.i_status' | translate }}">{{ 'incidents.i_status' | translate }}</th>
-      <td mat-cell *matCellDef="let incident"> {{ incident.status | translate }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'incidents.sort.status' | translate }}">{{ 'incidents.i_status' | translate }}</th>
+      <td mat-cell *matCellDef="let incident"> {{ ('incidents.status.' + incident.status.toLowerCase()) | translate }}</td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>{{ 'incidents.i_actions' | translate }}</th>
       <td mat-cell *matCellDef="let incident">
-        <a (click)="onEditItem(incident)" href="javascript:void(0)" [attr.aria-label]="'incidents.i_actions.edit' | translate">
+        <a (click)="onEditItem(incident)" href="javascript:void(0)" [attr.aria-label]="'incidents.actions.edit' | translate">
           <mat-icon>edit</mat-icon>
         </a>
-        <a (click)="onDeleteItem(incident)" href="javascript:void(0)" [attr.aria-label]="'incidents.i_actions.delete' | translate">
+        <a (click)="onDeleteItem(incident)" href="javascript:void(0)" [attr.aria-label]="'incidents.actions.delete' | translate">
           <mat-icon>delete</mat-icon>
         </a>
       </td>
@@ -36,7 +42,7 @@
 
     <tr mat-header-row *matHeaderRowDef="columnsToString"></tr>
     <tr *matRowDef="let row; columns: columnsToString;"
-        [ngClass]="{ 'editable-row': incidentData && incidentData.incident_id === row.id}" mat-row></tr>
+        [ngClass]="{ 'editable-row': incidentData && incidentData.id === row.id}" mat-row></tr>
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator>
 </div>
