--- a/src/app/materials/pages/materials-management/materials-management.component.html
+++ b/src/app/materials/pages/materials-management/materials-management.component.html
@@ -1,15 +1,25 @@
-<div class="table-wrapper">
+<div class="table-wrapper" *ngIf="!router.url.endsWith('entry-date') && !router.url.endsWith('exit-date')">
   <h1>{{ 'materials.title' | translate }}</h1>
+
+  <div class="btns-wrapper">
+    <button mat-raised-button class="view-button entrance-btn" [routerLink]="['entry-date']">
+      <mat-icon>login</mat-icon> {{ 'materials.go_to_entrances' | translate}}
+    </button>
+    <button mat-raised-button class="view-button exit-btn" [routerLink]="['exit-date']">
+      <mat-icon>logout</mat-icon> {{ 'materials.go_to_exits' | translate}}
+    </button>
+  </div>
+
   <!-- Data Table -->
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+    <ng-container matColumnDef="material_id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.material_id' | translate }}">{{ 'materials.material_id' | translate }}</th>
+      <td mat-cell *matCellDef="let material"> {{ material.material_id }}</td>
+    </ng-container>
+
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.name' | translate }}">{{ 'materials.name' | translate }}</th>
       <td mat-cell *matCellDef="let material"> {{ material.name }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="quantity">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.quantity' | translate }}">{{ 'materials.quantity' | translate }}</th>
-      <td mat-cell *matCellDef="let material"> {{ material.quantity }}</td>
     </ng-container>
 
     <ng-container matColumnDef="stock">
@@ -27,51 +37,20 @@
       <td mat-cell *matCellDef="let material"> {{ material.unit }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="provider">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.provider' | translate }}">{{ 'materials.provider' | translate }}</th>
-      <td mat-cell *matCellDef="let material"> {{ material.provider }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="provider_ruc">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.provider_ruc' | translate }}">{{ 'materials.provider_ruc' | translate }}</th>
-      <td mat-cell *matCellDef="let material"> {{ material.provider_ruc }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.date' | translate }}">{{ 'materials.date' | translate }}</th>
-      <td mat-cell *matCellDef="let material"> {{ material.date }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="receipt_number">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.receipt_number' | translate }}">{{ 'materials.receipt_number' | translate }}</th>
-      <td mat-cell *matCellDef="let material"> {{ material.receipt_number }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="payment_method">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.payment_method' | translate }}">{{ 'materials.payment_method' | translate }}</th>
-      <td mat-cell *matCellDef="let material"> {{ material.payment_method }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.m_status' | translate }}">{{ 'materials.m_status' | translate }}</th>
-      <td mat-cell *matCellDef="let material"> {{ 'materials.status.' + material.status | translate }}</td>
-    </ng-container>
-
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>{{ 'materials.actions' | translate }}</th>
+      <th mat-header-cell *matHeaderCellDef>{{ 'materials.m_actions' | translate }}</th>
       <td mat-cell *matCellDef="let material">
-        <a (click)="onEditItem(material)" href="javascript:void(0)" [attr.aria-label]="'materials.actions.edit' | translate">
+        <a (click)="onEditItem(material)" href="javascript:void(0)">
           <mat-icon>edit</mat-icon>
-        </a>
-        <a (click)="onDeleteItem(material)" href="javascript:void(0)" [attr.aria-label]="'materials.actions.delete' | translate">
-          <mat-icon>delete</mat-icon>
         </a>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columnsToString"></tr>
     <tr *matRowDef="let row; columns: columnsToString;"
-        [ngClass]="{ 'editable-row': materialData && materialData.material_id === row.id}" mat-row></tr>
+        [ngClass]="{ 'editable-row': materialData && materialData.id === row.id}" mat-row></tr>
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator>
 </div>
+
+<router-outlet></router-outlet>
