--- a/src/app/project-details/components/detail-management/detail-management.component.html
+++ b/src/app/project-details/components/detail-management/detail-management.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav mode="side" opened>
     <mat-nav-list>
-      <h3>{{ 'details' | translate }}</h3>
+      <h3>{{ 'detailsProjects.details' | translate }}</h3>
       @for (option of options; track option.label) {
         <a
           mat-list-item
@@ -13,7 +13,7 @@
         </a>
       }
       <a mat-list-item [routerLink]="['/projects']" class="back-to-projects">
-        {{ 'back to projects' | translate }}
+        {{ 'detailsProjects.back' | translate }}
       </a>
     </mat-nav-list>
   </mat-sidenav>
