--- a/src/app/workers/pages/worker-management/worker-management.component.html
+++ b/src/app/workers/pages/worker-management/worker-management.component.html
@@ -1,12 +1,19 @@
 <div class="table-wrapper">
   <h1>{{ 'workers.title' | translate }}</h1>
+  <div class="btn-add-wrapper">
+    <button mat-raised-button class="add-button" (click)="openAddDialog()">
+      <mat-icon class="icon">add</mat-icon>
+      {{ 'workers.add' | translate }}
+    </button>
+  </div>
+
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.name' | translate }}">{{ 'workers.name' | translate }}</th>
       <td mat-cell *matCellDef="let worker"> {{ worker.name }}</td>
     </ng-container>
     <ng-container matColumnDef="role">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.w_role' | translate }}">{{ 'workers.w_role' | translate }}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.role' | translate }}">{{ 'workers.w_role' | translate }}</th>
       <td mat-cell *matCellDef="let worker"> {{ worker.role  }}</td>
     </ng-container>
     <ng-container matColumnDef="hired_date">
@@ -18,7 +25,7 @@
       <td mat-cell *matCellDef="let worker"> {{ worker.project_id }}</td>
     </ng-container>
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>{{ 'workers.actions' | translate }}</th>
+      <th mat-header-cell *matHeaderCellDef>{{ 'workers.w_actions' | translate }}</th>
       <td mat-cell *matCellDef="let worker">
         <a (click)="onEditItem(worker)" href="javascript:void(0)" [attr.aria-label]="'workers.actions.edit' | translate">
           <mat-icon>edit</mat-icon>
@@ -30,7 +37,7 @@
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnsToString"></tr>
     <tr *matRowDef="let row; columns: columnsToString;"
-        [ngClass]="{ 'editable-row': workerData && workerData.worker_id === row.id}" mat-row></tr>
+        [ngClass]="{ 'editable-row': workerData && workerData.id === row.id}" mat-row></tr>
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator>
 </div>
