--- a/src/app/workers/pages/worker-management/worker-management.component.html
+++ b/src/app/workers/pages/worker-management/worker-management.component.html
@@ -1,3 +1,5 @@
+<!-- This file is part of the Worker Management Module
+     It displays a table of workers with options to add, edit, delete, and view tasks. -->
 <div class="table-wrapper">
   <h1>{{ 'workers.title' | translate }}</h1>
   <div class="btn-add-wrapper">
@@ -6,7 +8,7 @@
       {{ 'workers.add' | translate }}
     </button>
   </div>
-
+  <!-- The table displays a list of workers with their details and actions (edit and delete)-->
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.name' | translate }}">{{ 'workers.name' | translate }}</th>
@@ -24,14 +26,22 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.project_id' | translate }}">{{ 'workers.project_id' | translate }}</th>
       <td mat-cell *matCellDef="let worker"> {{ worker.project_id }}</td>
     </ng-container>
+    <ng-container matColumnDef="tasks">
+      <th mat-header-cell *matHeaderCellDef>{{ 'workers.w_tasks' | translate }}</th>
+      <td mat-cell *matCellDef="let worker">
+        <button mat-raised-button class="view-button" (click)="openViewTasksDialog(worker)">
+          {{ 'workers.view_tasks' | translate }}
+        </button>
+      </td>
+    </ng-container>
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>{{ 'workers.w_actions' | translate }}</th>
       <td mat-cell *matCellDef="let worker">
         <a (click)="onEditItem(worker)" href="javascript:void(0)" [attr.aria-label]="'workers.actions.edit' | translate">
-          <mat-icon>edit</mat-icon>
+          <mat-icon class="actions-icon">edit</mat-icon>
         </a>
         <a (click)="onDeleteItem(worker)" href="javascript:void(0)" [attr.aria-label]="'workers.actions.delete' | translate">
-          <mat-icon>delete</mat-icon>
+          <mat-icon class="actions-icon">delete</mat-icon>
         </a>
       </td>
     </ng-container>
