--- a/src/app/workers/pages/worker-tasks-dialog/worker-tasks-dialog.component.css
+++ b/src/app/workers/pages/worker-tasks-dialog/worker-tasks-dialog.component.css
@@ -5,15 +5,25 @@
   border-radius: 8px; /* Bordes redondeados */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra ligera */
   margin: 0 auto; /* Centrar */
-  width: 800px; /* Ancho fijo para uniformidad */
+  width: 100%; /* Ancho automático para adaptarse al contenido */
+  /* Ancho fijo para uniformidad */
+}
+
+.header-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 16px;
 }
 
 /* Título */
-.table-wrapper h1 {
+.h2 {
   font-family: 'Futura', 'Arial', sans-serif; /* Fuente Futura con fallback */
   font-size: 1.8em; /* Tamaño reducido */
   color: #2F2E2D; /* Gris oscuro */
-  margin-bottom: 16px;
+
+  display: flex;
+  justify-content: flex-start;
   text-align: left; /* Alinear a la izquierda */
 }
 
@@ -228,25 +238,26 @@ mat-paginator .mat-option:hover {
   margin-bottom: 20px;
 }
 
-.view-button {
-  /*
+.close-button {
   background-color: #DE7F1A !important;
-  color: white !important;
-  */
-  font-size: 0.85em;
-  font-weight: bold !important;
-  color: #DE7F1A !important;
-  border-radius: 6px;
-  padding: 4px 10px;
-  /*padding: 8px 16px;*/
-  display: inline-flex;
-  align-items: center;
   box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+  align-items: center;
   transition: background-color 0.3s ease, transform 0.2s ease;
+  display: inline-flex;
+  justify-content: flex-end;
+}
+.close-button:hover {
+  transform: scale(1.02);
 }
 
-.view-button:hover {
-  transform: scale(1.02);
+.close-button .icon {
+  color: white !important;
+}
+
+.btn-close-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 16px;
 }
 
 .actions-icon{
