--- a/src/app/materials/pages/materials-management/materials-management.component.html
+++ b/src/app/materials/pages/materials-management/materials-management.component.html
@@ -41,7 +41,7 @@
       <th mat-header-cell *matHeaderCellDef>{{ 'materials.m_actions' | translate }}</th>
       <td mat-cell *matCellDef="let material">
         <a (click)="onEditItem(material)" href="javascript:void(0)">
-          <mat-icon>edit</mat-icon>
+          <mat-icon class="actions-icon">edit</mat-icon>
         </a>
       </td>
     </ng-container>
