feat: Add materials, incidents, workers and machinery for contractor view

--- a/src/app/materials/components/exit-date/exit-date.component.html
+++ b/src/app/materials/components/exit-date/exit-date.component.html
@@ -25,9 +25,9 @@
       <td mat-cell *matCellDef="let material"> {{ material.name }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="quantity">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.quantity' | translate }}">{{ 'materials.quantity' | translate }}</th>
-      <td mat-cell *matCellDef="let material"> {{ material.quantity }}</td>
+    <ng-container matColumnDef="quantity_exit">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.quantity_exit' | translate }}">{{ 'materials.quantity_exit' | translate }}</th>
+      <td mat-cell *matCellDef="let material"> {{ material.quantity_exit }}</td>
     </ng-container>
 
     <ng-container matColumnDef="unit_price">
