--- a/src/app/incidents/pages/incident-contractor/incident-contractor.component.html
+++ b/src/app/incidents/pages/incident-contractor/incident-contractor.component.html
@@ -1,1 +1,30 @@
-<p>incident-contractor works!</p>
+<div class="table-wrapper">
+  <h1>{{ 'incidents.title' | translate }}</h1>
+  <!-- Data Table -->
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'incidents.sort.date' | translate }}">{{ 'incidents.date' | translate }}</th>
+      <td mat-cell *matCellDef="let incident"> {{ incident.date }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="incident_type">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'incidents.sort.incident_type' | translate }}">{{ 'incidents.incident_type' | translate }}</th>
+      <td mat-cell *matCellDef="let incident"> {{ incident.incident_type}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="severity">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'incidents.sort.severity' | translate }}">{{ 'incidents.i_severity' | translate }}</th>
+      <td mat-cell *matCellDef="let incident"> {{ ('incidents.severity.' + incident.severity.toLowerCase()) | translate }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'incidents.sort.status' | translate }}">{{ 'incidents.i_status' | translate }}</th>
+      <td mat-cell *matCellDef="let incident"> {{ ('incidents.status.' + incident.status.toLowerCase()) | translate }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columnsToString"></tr>
+    <tr *matRowDef="let row; columns: columnsToString;"
+        [ngClass]="{ 'editable-row': incidentData && incidentData.id === row.id}" mat-row></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+</div>
