--- a/src/app/machinery/pages/machinery-contractor/machinery-contractor.component.html
+++ b/src/app/machinery/pages/machinery-contractor/machinery-contractor.component.html
@@ -1,1 +1,30 @@
-<p>machinery-contractor works!</p>
+<div class="table-wrapper">
+  <h1>{{ 'machinery.title' | translate }}</h1>
+  <!-- Data Table -->
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'machinery.sort.name' | translate }}">{{ 'machinery.name' | translate }}</th>
+      <td mat-cell *matCellDef="let machinery"> {{ machinery.name }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="license_plate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'machinery.sort.license_plate' | translate }}">{{ 'machinery.license_plate' | translate }}</th>
+      <td mat-cell *matCellDef="let machinery"> {{ machinery.license_plate }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="register_date">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'machinery.sort.register_date' | translate }}">{{ 'machinery.register_date' | translate }}</th>
+      <td mat-cell *matCellDef="let machinery"> {{ machinery.register_date }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'machinery.sort.status' | translate }}">{{ 'machinery.m_status' | translate }}</th>
+      <td mat-cell *matCellDef="let machinery"> {{  ('machinery.status.'+ machinery.status.toLowerCase()) | translate }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columnsToString"></tr>
+    <tr *matRowDef="let row; columns: columnsToString;"
+        [ngClass]="{ 'editable-row': machineryData && machineryData.id === row.id}" mat-row></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+</div>
