--- a/src/app/tasks/pages/tasks-dialog-supervisor/tasks-dialog-supervisor.component.html
+++ b/src/app/tasks/pages/tasks-dialog-supervisor/tasks-dialog-supervisor.component.html
@@ -56,7 +56,7 @@
       </td>
 
     </ng-container>
-    <tr mat-header-row *matHeaderRowDef="columnsToString"></tr>
+    <tr mat-header-row class="header-table" *matHeaderRowDef="columnsToString"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToString;"></tr>
   </table>
 </div>
