--- a/src/app/incidents/pages/incident-contractor/incident-contractor.component.css
+++ b/src/app/incidents/pages/incident-contractor/incident-contractor.component.css
@@ -5,7 +5,7 @@
   border-radius: 8px; /* Bordes redondeados */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra ligera */
   margin: 0 auto; /* Centrar */
-  width: 800px; /* Ancho fijo para uniformidad */
+  width: fit-content; /* Ancho fijo para uniformidad */
 }
 
 /* Título */
@@ -24,7 +24,11 @@ mat-table {
   font-family: 'Futura', 'Arial', sans-serif; /* Fuente Futura */
   border-collapse: collapse; /* Evitar espacios entre celdas */
 }
-
+.header-table  {
+  font-weight: bold !important; /* Negrita para encabezados */
+  color: white !important; /* Gris oscuro */
+  background-color: #DE7F1A;
+}
 /* Encabezados */
 mat-header-cell {
   font-size: 0.85em; /* Texto más pequeño */
@@ -191,6 +195,8 @@ mat-paginator .mat-option:hover {
 /* Efecto de elevación en la tabla */
 .mat-elevation-z8 {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra más suave */
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 
