--- a/src/app/incidents/pages/incident-contractor/incident-contractor.component.html
+++ b/src/app/incidents/pages/incident-contractor/incident-contractor.component.html
@@ -22,7 +22,7 @@
       <td mat-cell *matCellDef="let incident"> {{ ('incidents.status.' + incident.status.toLowerCase()) | translate }}</td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="columnsToString"></tr>
+    <tr mat-header-row class="header-table" *matHeaderRowDef="columnsToString"></tr>
     <tr *matRowDef="let row; columns: columnsToString;"
         [ngClass]="{ 'editable-row': incidentData && incidentData.id === row.id}" mat-row></tr>
   </table>
