--- a/src/app/machinery/pages/machinery-contractor/machinery-contractor.component.css
+++ b/src/app/machinery/pages/machinery-contractor/machinery-contractor.component.css
@@ -5,7 +5,7 @@
   border-radius: 8px; /* Bordes redondeados */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra ligera */
   margin: 0 auto; /* Centrar */
-  width: 800px; /* Ancho fijo para uniformidad */
+  width: fit-content; /* Ancho fijo para uniformidad */
 }
 
 /* Título */
@@ -191,9 +191,15 @@ mat-paginator .mat-option:hover {
 /* Efecto de elevación en la tabla */
 .mat-elevation-z8 {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra más suave */
+  border-radius: 8px;
+  overflow: hidden;
 }
 
-
+.header-table  {
+  font-weight: bold !important; /* Negrita para encabezados */
+  color: white !important; /* Gris oscuro */
+  background-color: #DE7F1A;
+}
 
 .add-button {
   background-color: #DE7F1A !important;
