--- a/src/app/machinery/pages/machinery-contractor/machinery-contractor.component.html
+++ b/src/app/machinery/pages/machinery-contractor/machinery-contractor.component.html
@@ -22,7 +22,7 @@
       <td mat-cell *matCellDef="let machinery"> {{  ('machinery.status.'+ machinery.status.toLowerCase()) | translate }}</td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="columnsToString"></tr>
+    <tr mat-header-row class="header-table" *matHeaderRowDef="columnsToString"></tr>
     <tr *matRowDef="let row; columns: columnsToString;"
         [ngClass]="{ 'editable-row': machineryData && machineryData.id === row.id}" mat-row></tr>
   </table>
