--- a/src/app/machinery/pages/machinery-management/machinery-management.component.css
+++ b/src/app/machinery/pages/machinery-management/machinery-management.component.css
@@ -191,9 +191,15 @@ mat-paginator .mat-option:hover {
 /* Efecto de elevación en la tabla */
 .mat-elevation-z8 {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra más suave */
+  border-radius: 8px;
+  overflow: hidden;
 }
 
-
+.header-table  {
+  font-weight: bold !important; /* Negrita para encabezados */
+  color: white !important; /* Gris oscuro */
+  background-color: #DE7F1A;
+}
 
 .add-button {
   background-color: #DE7F1A !important;
