--- a/src/app/machinery/pages/machinery-management/machinery-management.component.html
+++ b/src/app/machinery/pages/machinery-management/machinery-management.component.html
@@ -40,7 +40,7 @@
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="columnsToString"></tr>
+    <tr mat-header-row class="header-table" *matHeaderRowDef="columnsToString"></tr>
     <tr *matRowDef="let row; columns: columnsToString;"
         [ngClass]="{ 'editable-row': machineryData && machineryData.id === row.id}" mat-row></tr>
   </table>
