--- a/src/app/materials/pages/materials-contractor/materials-contractor.component.html
+++ b/src/app/materials/pages/materials-contractor/materials-contractor.component.html
@@ -4,31 +4,31 @@
   <!-- Data Table -->
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
     <ng-container matColumnDef="material_id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.material_id' | translate }}">{{ 'materials.material_id' | translate }}</th>
+      <th mat-header-cell class="header-table" *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.material_id' | translate }}">{{ 'materials.material_id' | translate }}</th>
       <td mat-cell *matCellDef="let material"> {{ material.material_id }}</td>
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.name' | translate }}">{{ 'materials.name' | translate }}</th>
+      <th mat-header-cell class="header-table" *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.name' | translate }}">{{ 'materials.name' | translate }}</th>
       <td mat-cell *matCellDef="let material"> {{ material.name }}</td>
     </ng-container>
 
     <ng-container matColumnDef="stock">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.stock' | translate }}">{{ 'materials.stock' | translate }}</th>
+      <th mat-header-cell class="header-table" *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.stock' | translate }}">{{ 'materials.stock' | translate }}</th>
       <td mat-cell *matCellDef="let material"> {{ material.stock }}</td>
     </ng-container>
 
     <ng-container matColumnDef="unit_price">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.unit_price' | translate }}">{{ 'materials.unit_price' | translate }}</th>
+      <th mat-header-cell class="header-table" *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.unit_price' | translate }}">{{ 'materials.unit_price' | translate }}</th>
       <td mat-cell *matCellDef="let material"> {{ material.unit_price }}</td>
     </ng-container>
 
     <ng-container matColumnDef="unit">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.unit' | translate }}">{{ 'materials.unit' | translate }}</th>
+      <th mat-header-cell class="header-table" *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'materials.sort.unit' | translate }}">{{ 'materials.unit' | translate }}</th>
       <td mat-cell *matCellDef="let material"> {{ material.unit }}</td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="columnsToString"></tr>
+    <tr mat-header-row class="header-table" *matHeaderRowDef="columnsToString"></tr>
     <tr *matRowDef="let row; columns: columnsToString;"
         [ngClass]="{ 'editable-row': materialData && materialData.id === row.id}" mat-row></tr>
   </table>
