--- a/src/app/tasks/pages/tasks-dialog-supervisor/tasks-dialog-supervisor.component.css
+++ b/src/app/tasks/pages/tasks-dialog-supervisor/tasks-dialog-supervisor.component.css
@@ -5,8 +5,7 @@
   border-radius: 8px; /* Bordes redondeados */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra ligera */
   margin: 0 auto; /* Centrar */
-  width: 100%; /* Ancho automático para adaptarse al contenido */
-  /* Ancho fijo para uniformidad */
+  width: fit-content; /* Ancho automático para adaptarse al contenido */
 }
 
 .header-wrapper {
@@ -28,11 +27,20 @@
 }
 
 /* Tabla */
-mat-table {
-  width: 100%; /* Ocupa el ancho del contenedor (800px) */
+.mat-elevation-z8  {
+  width: fit-content; /* Ocupa el ancho del contenedor (800px) */
   background-color: #fff;
   font-family: 'Futura', 'Arial', sans-serif; /* Fuente Futura */
   border-collapse: collapse; /* Evitar espacios entre celdas */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden; /* Bordes redondeados */
+}
+
+.header-table  {
+  font-weight: bold !important; /* Negrita para encabezados */
+  color: white !important; /* Gris oscuro */
+  background-color: #DE7F1A;
 }
 
 /* Encabezados */
@@ -199,10 +207,6 @@ mat-paginator .mat-option:hover {
 }
 
 /* Efecto de elevación en la tabla */
-.mat-elevation-z8 {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra más suave */
-}
-
 
 
 .add-button {
