--- a/src/app/users/contractors/pages/project-reports-contractor/project-reports-contractor.component.html
+++ b/src/app/users/contractors/pages/project-reports-contractor/project-reports-contractor.component.html
@@ -1,1 +1,129 @@
-<p>project-reports-contractor works!</p>
+<div class = "table-wrapper" id="reportContent">
+  <h1> {{ 'reports.title' | translate }}</h1>
+  <div class = "header-wrapper">
+    <h2> {{ 'reports.week_report' | translate }}</h2>
+    <button mat-raised-button class="downland-button" (click)="downloadPDF()">
+      <mat-icon class="icon">save_alt</mat-icon>
+      {{ 'reports.download' | translate }}
+    </button>
+  </div>
+  <!-- Report Data Table -->
+
+  <!-- Tabla horizontal de datos principales -->
+  <h3>{{ 'reports.data_principal' | translate }}</h3>
+  <table mat-table [dataSource]="projectInfoDataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="project-name">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'reports.project_name' | translate }}</th>
+      <td mat-cell *matCellDef="let element">{{ element.project_name }}</td>
+    </ng-container>
+    <ng-container matColumnDef="project_id" class="mat-column">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'reports.project_id' | translate }}</th>
+      <td mat-cell *matCellDef="let element">{{ element.project_id }}</td>
+    </ng-container>
+    <ng-container matColumnDef="supervisor_name">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'reports.supervisor_name' | translate }}</th>
+      <td mat-cell *matCellDef="let element">{{ element.supervisor_name }}</td>
+    </ng-container>
+    <ng-container matColumnDef="contractor_name">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'reports.contractor_name' | translate }}</th>
+      <td mat-cell *matCellDef="let element">{{ element.contractor_name }}</td>
+    </ng-container>
+    <tr mat-header-row class="header-table" *matHeaderRowDef="projectInfoColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: projectInfoColumns;"></tr>
+  </table>
+
+  <!-- Tareas realizadas -->
+  <h3>{{ 'reports.done_tasks' | translate }}</h3>
+  <table mat-table [dataSource]="doneTasksDataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="description">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'workers.tasks.description' | translate }}</th>
+      <td mat-cell *matCellDef="let task">{{ task.description }}</td>
+    </ng-container>
+    <ng-container matColumnDef="start_date">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'workers.tasks.start_date' | translate }}</th>
+      <td mat-cell *matCellDef="let task">{{ task.start_date }}</td>
+    </ng-container>
+    <ng-container matColumnDef="due_date">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'workers.tasks.due_date' | translate }}</th>
+      <td mat-cell *matCellDef="let task">{{ task.due_date }}</td>
+    </ng-container>
+    <tr mat-header-row class="header-table" *matHeaderRowDef="doneTasksColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: doneTasksColumns;"></tr>
+  </table>
+
+  <!-- Materiales de entrada -->
+  <h3>{{ 'reports.entry_materials' | translate }}</h3>
+  <table mat-table [dataSource]="entryMaterialsDataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'materials.name' | translate }}</th>
+      <td mat-cell *matCellDef="let material">{{ material.name }}</td>
+    </ng-container>
+    <ng-container matColumnDef="quantity">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'materials.quantity' | translate }}</th>
+      <td mat-cell *matCellDef="let material">{{ material.quantity }}</td>
+    </ng-container>
+    <ng-container matColumnDef="unit_price">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'materials.price' | translate }}</th>
+      <td mat-cell *matCellDef="let material">{{ material.unit_price | currency }}</td>
+    </ng-container>
+    <ng-container matColumnDef="receipt_number">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'materials.receipt_number' | translate }}</th>
+      <td mat-cell *matCellDef="let material">{{ material.receipt_number }}</td>
+    </ng-container>
+    <ng-container matColumnDef="date">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'materials.date' | translate }}</th>
+      <td mat-cell *matCellDef="let material">{{ material.date }}</td>
+    </ng-container>
+    <tr mat-header-row class="header-table" *matHeaderRowDef="entryMaterialsColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: entryMaterialsColumns;"></tr>
+  </table>
+
+  <!-- Materiales de salida -->
+  <h3>{{ 'reports.exit_materials' | translate }}</h3>
+  <table mat-table [dataSource]="exitMaterialsDataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'materials.name' | translate }}</th>
+      <td mat-cell *matCellDef="let material">{{ material.name }}</td>
+    </ng-container>
+    <ng-container matColumnDef="quantity_exit">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'materials.quantity' | translate }}</th>
+      <td mat-cell *matCellDef="let material">{{ material.quantity_exit }}</td>
+    </ng-container>
+    <ng-container matColumnDef="unit_price">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'materials.price' | translate }}</th>
+      <td mat-cell *matCellDef="let material">{{ material.unit_price | currency }}</td>
+    </ng-container>
+    <ng-container matColumnDef="receipt_number">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'materials.receipt_number' | translate }}</th>
+      <td mat-cell *matCellDef="let material">{{ material.receipt_number }}</td>
+    </ng-container>
+    <ng-container matColumnDef="exit_date">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'materials.exit_date' | translate }}</th>
+      <td mat-cell *matCellDef="let material">{{ material.exit_date }}</td>
+    </ng-container>
+    <tr mat-header-row class="header-table" *matHeaderRowDef="exitMaterialsColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: exitMaterialsColumns;"></tr>
+  </table>
+  <!-- Incidentes -->
+  <h3>{{ 'reports.incidents' | translate }}</h3>
+  <table mat-table [dataSource]="incidentsDataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="incident_type">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'incidents.incident_type' | translate }}</th>
+      <td mat-cell *matCellDef="let incident">{{ incident.incident_type }}</td>
+    </ng-container>
+    <ng-container matColumnDef="date">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'incidents.date' | translate }}</th>
+      <td mat-cell *matCellDef="let incident">{{ incident.date }}</td>
+    </ng-container>
+    <ng-container matColumnDef="severity">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'incidents.i_severity' | translate }}</th>
+      <td mat-cell *matCellDef="let incident">{{ incident.severity }}</td>
+    </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'incidents.i_status' | translate }}</th>
+      <td mat-cell *matCellDef="let incident">{{ incident.status }}</td>
+    </ng-container>
+    <tr mat-header-row class="header-table" *matHeaderRowDef="incidentsColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: incidentsColumns;"></tr>
+  </table>
+</div>
