--- a/src/app/workers/pages/worker-contractor/worker-contractor.component.html
+++ b/src/app/workers/pages/worker-contractor/worker-contractor.component.html
@@ -2,30 +2,30 @@
   <h1>{{ 'workers.title' | translate }}</h1>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.name' | translate }}">{{ 'workers.name' | translate }}</th>
+      <th mat-header-cell class="header-table" *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.name' | translate }}">{{ 'workers.name' | translate }}</th>
       <td mat-cell *matCellDef="let worker"> {{ worker.name }}</td>
     </ng-container>
     <ng-container matColumnDef="role">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.role' | translate }}">{{ 'workers.w_role' | translate }}</th>
+      <th mat-header-cell class="header-table" *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.role' | translate }}">{{ 'workers.w_role' | translate }}</th>
       <td mat-cell *matCellDef="let worker"> {{ worker.role  }}</td>
     </ng-container>
     <ng-container matColumnDef="hired_date">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.hired_date' | translate }}">{{ 'workers.hired_date' | translate }}</th>
+      <th mat-header-cell class="header-table" *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.hired_date' | translate }}">{{ 'workers.hired_date' | translate }}</th>
       <td mat-cell *matCellDef="let worker"> {{ worker.hired_date }}</td>
     </ng-container>
     <ng-container matColumnDef="project_id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.project_id' | translate }}">{{ 'workers.project_id' | translate }}</th>
+      <th mat-header-cell class="header-table" *matHeaderCellDef mat-sort-header sortActionDescription="{{ 'workers.sort.project_id' | translate }}">{{ 'workers.project_id' | translate }}</th>
       <td mat-cell *matCellDef="let worker"> {{ worker.project_id }}</td>
     </ng-container>
     <ng-container matColumnDef="tasks">
-      <th mat-header-cell *matHeaderCellDef>{{ 'workers.w_tasks' | translate }}</th>
+      <th mat-header-cell class="header-table" *matHeaderCellDef>{{ 'workers.w_tasks' | translate }}</th>
       <td mat-cell *matCellDef="let worker">
         <button mat-raised-button class="view-button" (click)="openViewTasksDialog(worker)">
           {{ 'workers.view_tasks' | translate }}
         </button>
       </td>
     </ng-container>
-    <tr mat-header-row *matHeaderRowDef="columnsToString"></tr>
+    <tr mat-header-row class="header-table" *matHeaderRowDef="columnsToString"></tr>
     <tr *matRowDef="let row; columns: columnsToString;" mat-row></tr>
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator>
