feat: add profile module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,10 @@
   <mat-toolbar-row>
     <app-language-switcher></app-language-switcher>
 
+
+    <span class="spacer"></span>
+    <a routerLink="/profile" class="toolbar-link">⚙️ Configuración</a>
+
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
