--- a/src/app/projects/pages/project-management/project-management.component.html
+++ b/src/app/projects/pages/project-management/project-management.component.html
@@ -15,7 +15,7 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <a mat-button [routerLink]="['/details', project.project_id]" color="accent">
+        <a mat-button [routerLink]="['/details', project.id]" color="accent">
           {{ 'projects.view_details' | translate }}
         </a>
       </mat-card-actions>
