--- a/src/app/users/supervisors/pages/detail-management/detail-management.component.html
+++ b/src/app/users/supervisors/pages/detail-management/detail-management.component.html
@@ -12,6 +12,8 @@
           {{ option.label | translate }}
         </a>
       }
+
+      <a routerLink="/profile" class="toolbar-link">⚙️ Configuración</a>
       <div class="btn-back-wrapper">
       <a mat-list-item [routerLink]="['/projects']" class="back-to-projects">
         <mat-icon class="icon">keyboard_return</mat-icon>
